--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -6,7 +6,7 @@ spring:
     
     datasource:
         dataSourceClassName: com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-        url: jdbc:mysql://localhost:3306/jhipster
+        url: jdbc:mysql://localhost:3306/jquaternion
         databaseName: 
         serverName: 
         username: root
